# stochastics

./: .project  .pydevproject  README.md  pyproject.toml
src/thalesians/stochastics/: distrs.py  kde.py  outliers.py  processes.py  simulation.py
src/thalesians/stochastics/filtering/: __init__.py  kalman.py  particle.py  visual.py
test/: test_distrs.py  test_filtering.py  test_kde.py  test_outliers.py  test_processes.py  test_simulation.py
